--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,7 +54,7 @@ job-apply:
     - echo "your workdir - $(pwd)"
     - id -G
     - terraform apply -auto-approve
-    - echo "$env_name,create,$(date '+%Y-%m-%d-%H:%M:%S')" | >> ../list_env.csv
+    - echo "$env_name,create,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
   tags: [kvm]
 
 job-destroy:
@@ -63,6 +63,6 @@ job-destroy:
     - cd /home/gitlab-runner/environment/$env_name
     - echo "your workdir - $(pwd)"
     - terraform destroy -auto-approve
-    - echo "$env_name,destroy,$(date '+%Y-%m-%d-%H:%M:%S')" | >> ../list_env.csv
+    - echo "$env_name,destroy,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
   when: manual
   tags: [kvm]
