--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ job-destroy:
     - terraform destroy -auto-approve
     - echo "$env_name,destroy,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
     - cd ..
+    - echo $(pwd);
     - rm -rf $env_name env-$env_name.txt
   when: manual
   tags: [kvm]
