test rule only main branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,9 @@ workflow:
   rules:
   - exists:
     - vm.txt
-  # uncomment untuk rule hanya branch "main"
-  # - if: $CI_COMMIT_BRANCH == "main"
+  # uncomment jika ingin diterapkan di branch main
+  # rule hanya branch "main"
+  - if: $CI_COMMIT_BRANCH == "main"
   
 # gunakan string commit untuk nama folder(environment) yang unik
 variables:
@@ -19,23 +20,21 @@ stages:
 job-generate:
   stage: generate
   script:
-    - echo "user - $GITLAB_USER_LOGIN"
-    - echo "env name - $env_name "
-    - echo "###################################################"
     # copy file vm.txt untuk provisioning 
     # ke folder /home/gitlab-runner/environment/
     # yang sudah disediakan script .not-tfgen.sh
+    - echo "copying vm.txt to home/gitlab-runner/environment"
     - cp vm.txt /home/gitlab-runner/environment/env-$env_name.txt
     - cd /home/gitlab-runner/environment
+    - echo "generate env folder and files"
     - ./not-tfgen.sh $env_name env-$env_name.txt
-    - cd $env_name
   tags: [kvm]
 
 job-init:
   stage: init
   script:
     - cd /home/gitlab-runner/environment/$env_name
-    - echo "your workdir - $(pwd)"
+    - echo "init $(pwd)"
     - terraform init
   tags: [kvm]
 
@@ -43,7 +42,7 @@ job-validate:
   stage: validate
   script:
     - cd /home/gitlab-runner/environment/$env_name
-    - echo "your workdir - $(pwd)"
+    - echo "validate $(pwd)"
     - terraform validate
   tags: [kvm]
 
@@ -51,7 +50,7 @@ job-apply:
   stage: apply
   script:
     - cd /home/gitlab-runner/environment/$env_name
-    - echo "your workdir - $(pwd)"
+    - echo "apply $(pwd)"
     - terraform apply -auto-approve
     - echo "$env_name,create,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
   tags: [kvm]
@@ -60,13 +59,10 @@ job-destroy:
   stage: destroy
   script:
     - cd /home/gitlab-runner/environment/$env_name
-    - echo "your workdir - $(pwd)"
+    - echo "destroy $(pwd)"
     - terraform destroy -auto-approve
     - echo "$env_name,destroy,$(date '+%Y-%m-%d-%H:%M:%S')" >> ../list_env.csv
-    - cd ..
-    - echo $(pwd);
-    - echo $env_name
-    - echo env-$env_name.txt
-    - rm -rf $env_name env-$env_name.txt
+    - echo "remove $env_name env folder and files"
+    - rm -rf ../$env_name ../env-$env_name.txt
   when: manual
   tags: [kvm]
