--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,8 +5,9 @@ workflow:
   # uncomment jika ingin diterapkan di branch main
   # rule hanya branch "main"
   - if: $CI_COMMIT_BRANCH == "main"
+    when: always
+  - if: $CI_COMMIT_BRANCH != "main"
     when: never
-  - when: never
   
 # gunakan string commit untuk nama folder(environment) yang unik
 variables:
