test vm.txt rule

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ stages:
   - destroy
 
 job-generate:
-  only: [main]
+  # only: [main]
   stage: generate
   script:
     - echo $CI_COMMIT_BRANCH
@@ -30,6 +30,7 @@ job-generate:
   tags: [kvm]
 
 # job-init:
+# only: [main]
 #   stage: init
 #   script:
 #     - cd /home/gitlab-runner/environment/$env_name
@@ -38,6 +39,7 @@ job-generate:
 #   tags: [kvm]
 
 # job-validate:
+# only: [main]
 #   stage: validate
 #   script:
 #     - cd /home/gitlab-runner/environment/$env_name
@@ -46,6 +48,7 @@ job-generate:
 #   tags: [kvm]
 
 # job-apply:
+# only: [main]
 #   stage: apply
 #   script:
 #     - cd /home/gitlab-runner/environment/$env_name
@@ -55,6 +58,7 @@ job-generate:
 #   tags: [kvm]
 
 # job-destroy:
+# only: [main]
 #   stage: destroy
 #   script:
 #     - cd /home/gitlab-runner/environment/$env_name
