--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ workflow:
 
 # gunakan string commit untuk nama folder(environment) yang unik
 variables:
-  env_name: $GITLAB_USER_LOGIN-$CI_COMMIT_SHORT_SHA
+  env_name: $GITLAB_USER_LOGIN
 
 stages:
   - generate
