--- a/config-nat.yaml
+++ b/config-nat.yaml
@@ -7,3 +7,8 @@ nat2:
   forwarding: 11810
   target_ip: 10.30.13.173
   target_port: 22
+
+nat3:
+  forwarding: 11820
+  target_ip: 10.30.13.174
+  target_port: 22
