--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 workflow:
   rules:
   # jika bukan di branch main, jangan run pipeline
-  #- if: $CI_COMMIT_BRANCH != "main"
-  #  when: never
+  - if: $CI_COMMIT_BRANCH != "main"
+    when: never
   - exists:
     - vm.txt
 
@@ -96,6 +96,9 @@ job-nat:
 
 job-destroy:
   stage: destroy
+  only:
+    changes:
+      - vm.txt
   script:
     - cd /home/gitlab-runner/environment
     - ./delete-rules-iptables.sh env-$env_name.txt
