Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ stages:
   - init
   - validate
   - plan
+  - tele
   - apply
   - nat
   - destroy
@@ -64,6 +65,19 @@ job-plan:
     - echo "planning $(pwd)"
     - terraform plan
   tags: [kvm]
+
+
+
+job-tele:
+  stage: tele
+  image: alpine:latest
+  script:
+    - 'apk --no-cache add curl'
+    - 'curl -X POST -H "Content-Type: application/json" -d "{\"chat_id\": \"-1001699500768\", \"text\": \"new merge request, see: https://go.btech.id\"}" https://api.telegram.org/bot5084775471:AAHvHQY2diotIjZx9l7n1319V4Rp7MERl4w/sendMessage
+ '
+  only:
+    - vm.txt
+
 
 job-apply:
   stage: apply
