--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ job-tele:
     changes:
       - vm.txt
   script:
-    - 'curl -X POST -H "Content-Type: application/json" -d "{\"chat_id\": \"-1001699500768\", \"text\": \"new merge request,see:https://go.btech.id\"}" https://api.telegram.org/bot5084775471:AAHvHQY2diotIjZx9l7n1319V4Rp7MERl4w/sendMessage'
+    - curl -X POST -H "Content-Type: application/json" -d "{\"chat_id\": \"-1001699500768\", \"text\": \"new merge request,see:https://go.btech.id\"}" https://api.telegram.org/bot5084775471:AAHvHQY2diotIjZx9l7n1319V4Rp7MERl4w/sendMessage
   tags: [kvm]
 
 job-apply:
