--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 workflow:
   rules:
   # jika bukan di branch main, jangan run pipeline
-  #- if: $CI_COMMIT_BRANCH != "main"
-  #  when: never
+  - if: $CI_COMMIT_BRANCH != "main"
+    when: never
   - exists:
     - vm.txt
 
@@ -74,9 +74,8 @@ job-notif:
   #   changes:
   #     - merge_requests
   script:
-    # - cd /home/gitlab-runner/environment
-    # - ./notif.sh
-    - 'curl -X POST -H "Content-Type: application/json" -d "{\"chat_id\": \"-1001699500768\", \"text\": \"new merge request, see: https://go.btech.id\"}" https://api.telegram.org/bot5084775471:AAHvHQY2diotIjZx9l7n1319V4Rp7MERl4w/sendMessage'
+    - cd /home/gitlab-runner/environment
+    - ./notif.sh $GITLAB_USER_LOGIN
   tags: [kvm]
 
 job-apply:
