--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,8 +99,9 @@ job-config-monitoring:
     changes:
       - vm.txt
   script:
+    - cd /home/gitlab-runner/environment/scripts
     - echo $(pwd)
-    - ll
+    - ls
     - bash /home/gitlab-runner/environment/scripts/run-config.sh /home/gitlab-runner/environment/env-$env_name.txt
   tags: [kvm]
 
