--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,7 +102,7 @@ job-config-monitoring:
     - cd /home/gitlab-runner/environment/scripts
     - echo $(pwd)
     - ls
-    - bash /home/gitlab-runner/environment/scripts/run-config.sh /home/gitlab-runner/environment/env-$env_name.txt
+    - ./run-config.sh /home/gitlab-runner/environment/env-$env_name.txt
   tags: [kvm]
 
 job-nat:
