fixing delete nat cicd

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -128,14 +128,14 @@ job-destroy:
       - vm.txt
   script:
     - cd /home/gitlab-runner/environment
-    - ./delete-rules-iptables.sh env-$env_name.txt
+    # - ./delete-rules-iptables.sh env-$env_name.txt
     - cd /home/gitlab-runner/environment/$env_name
     - echo "destroy $(pwd)"
     - terraform destroy -auto-approve
     - echo "remove $env_name env folder and files"
     - rm -rf ../$env_name ../env-$env_name.txt
     - cd /home/gitlab-runner/environment
-    - ./delete-rules-iptables.sh env-$env_name.txt
+    # - ./delete-rules-iptables.sh env-$env_name.txt
     - echo "destroy success"
     - cd /home/gitlab-runner/environment
     - ./notif-destroy.sh
