--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 workflow:
   rules:
   # jika bukan di branch main, jangan run pipeline
-  #- if: $CI_COMMIT_BRANCH != "main"
-  #  when: never
+  - if: $CI_COMMIT_BRANCH != "main"
+    when: never
   - exists:
     - vm.txt
 
@@ -111,10 +111,10 @@ job-nat:
     changes:
       - config-nat.yaml
   script:
-    - cp config-nat.yaml /home/gitlab-runner/environment/config-nat/config-nat.yaml
-    - cp apply_nat.py /home/gitlab-runner/environment/config-nat/apply_nat.py
+    - cp config-nat.yaml /home/gitlab-runner/environment/scripts/config-nat.yaml
+    # - cp apply_nat.py /home/gitlab-runner/environment/scripts/apply_nat.py
     # - cp validate_nat.py /home/gitlab-runner/environment/config-nat/validate_nat.py
-    - cd /home/gitlab-runner/environment/config-nat
+    - cd /home/gitlab-runner/environment/scripts
     # - ./validate_nat.py list-nat-used.txt config-nat.yaml
     - ./apply_nat.py config-nat.yaml
     # - echo "LIST USED PORT in LAB7"
