--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,18 +91,18 @@ job-apply:
     - terraform apply -auto-approve
   tags: [kvm]
 
-job-config-monitoring:
-  stage: config-monitoring
+#job-config-monitoring:
+#  stage: config-monitoring
   # allow_failure: true
-  only:
-    changes:
-      - vm.yaml
-  when: delayed
-  start_in: 1 minute
-  script:
-    - cd /home/gitlab-runner/environment/scripts
-    - ./run_install_node_exporter.py -f /home/gitlab-runner/environment/env-$env_name.txt -k dwara.pem
-  tags: [kvm]
+#  only:
+#    changes:
+#      - vm.yaml
+#  when: delayed
+#  start_in: 1 minute
+#  script:
+#    - cd /home/gitlab-runner/environment/scripts
+#    - ./run_install_node_exporter.py -f /home/gitlab-runner/environment/env-$env_name.txt -k dwara.pem
+#  tags: [kvm]
 
 job-nat:
   stage: nat
