Edit ci pipelines & test edit vm (5)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ job-generate:
     - echo "generate new temp files"
     - echo $CI_JOB_ID
     - ./python-tfgen/tfgen.py -f vm.yaml -o $CI_JOB_ID
-    - cp -r $CI_JOB_ID/!(terraform.*) vm
+    - cp -r $CI_JOB_ID/* vm
     - echo "Remove temp generated files"
     - rm -rf /home/gitlab-runner/environment/$CI_JOB_ID
   tags: [kvm]
